<resources>
    <string name="app_name" translatable="false">BusinessApp2</string>
    <string name="welcome_to_denox" translatable="false">Welcome to DenoX</string>
    <string name="signin_to_continue" translatable="false">Signin to continue</string>
    <string name="email_address" translatable="false">Email Address</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="don_t_have_an_account_signup" translatable="false">Don\'t have an account? Signup</string>
    <string name="Submit" translatable="false">Submit</string>
    <string name="SignUp">Sign Up</string>
    <string name="username">Username</string>
    <string name="Retypepassword">Retype Password</string>
    <string name="denox">DenoX</string>
    <string name="company_progress">Company Progress</string>
    <string name="_5">5</string>
    <string name="my_tasks">My Tasks</string>
    <string name="TODO">TODO</string>
    <string name="new_task">New Task</string>
    <string-array name="priority">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string name="search">Search</string>
    <string name="tasks">Tasks</string>
    <string name="chats_and_calls">Chats and Calls</string>
    <string name="calls_and_messages">calls and Messages</string>
    <string name="success_message">Records have been saved Successfully</string>
    <string name="error_email_exists">Email already exists</string>
    <string name="error_password_match">Passwords don\'t match</string>
    <string name="error_message_name">name</string>
    <string name="error_message_email">email</string>
    <string name="error_message_password">password</string>
    <string name="error_valid_email_password">invalid email and password</string>
    <string name="projects">Projects</string>
    <string name="add">Add</string>
    <string name="my_projects">My Projects</string>
    <string name="dashboard">Dashboard</string>
    <string name="select_contacts_below_to_start_a_conversation">Select contacts below to start a conversation</string>
    <string name="generator">generator</string>
    <string name="invoices">Invoices</string>
    <string name="create_your_invoice">Create Your Invoice</string>
    <string name="monthly_profit">Monthly Profit</string>
    <string name="pending">Pending</string>
    <string name="todo">TODO</string>
    <string name="business_plan">Business Plan</string>
    <string name="calls_and_chats">Calls and Chats</string>
    <string name="invoice">Invoice</string>
    <string name="sales_and_expences">Sales and Expences</string>
    <string name="expand_menu">Expand Menu</string>
    <string name="_0">0</string>
    <string name="estimated_cost_mk">Estimated Cost (MK)</string>
    <string name="deliverable">Deliverable</string>
    <string name="deadline">Deadline</string>
    <string name="select_date">Select Date</string>
    <string name="priority">Priority</string>
    <string name="finished">Finished</string>
    <string name="status">Status</string>
    <string name="project_name">Project Name</string>
    <string name="name">Name</string>
    <string name="project_task_template">Project Task Template</string>
    <string name="task_details_goes_here">Task details goes here</string>
    <string name="description">Description</string>
    <string name="ongoing">Ongoing</string>
    <string name="Product">product</string>
    <string name="project_template">project task</string>
    <string name="Project_template">Project Template</string>
    <string name="Products">products</string>
    <string name="product">Product</string>
    <string name="products">Products</string>
    <string name="Ongoing">Ongoing</string>
    <string name="task_name">Task Name</string>
    <string name="balance">Current Balance</string>
    <string name="mk_0_00">MK 0.00</string>
</resources>