<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/project"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Project_template"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/projectname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/projectName"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="4dp"
        android:autofillHints=" "
        android:hint="@string/project_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#C8000000"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/pstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:text="@string/status"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/pongoing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="-19dp"
        android:text="@string/Ongoing"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <CheckBox
        android:id="@+id/pcheckBox1"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="5dp" />
    <TextView
        android:id="@+id/pfinished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="-19dp"
        android:text="@string/finished"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <CheckBox
        android:id="@+id/pcheckBox2"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginStart="255dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="5dp" />

    <TextView
        android:id="@+id/priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:text="@string/priority"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="133dp"
        android:layout_height="42dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="-44dp" />

    <TextView
        android:id="@+id/pDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:text="@string/deadline"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/psetDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="-19dp"
        android:layout_marginEnd="-17dp"
        android:text="@string/select_date"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textColor="#C8000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/pproduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:text="@string/product"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/products"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="4dp"
        android:autofillHints=" "
        android:hint="@string/products"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#C8000000"
        android:textStyle="italic"

        />
    <TextView
        android:id="@+id/estimatedCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:text="@string/estimated_cost_mk"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/pCost"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="4dp"
        android:autofillHints=" "
        android:hint="@string/_0"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#C8000000"
        android:textStyle="italic"

        />
    <TextView
        android:id="@+id/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:text="@string/description"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/pDescription"
        android:layout_width="297dp"
        android:layout_height="176dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="4dp"
        android:autofillHints=" "
        android:hint="@string/task_details_goes_here"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#C8000000"
        android:textStyle="italic"

        />

    <Button
        android:id="@+id/addprojectp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:backgroundTint="#70011AFF" >

    </Button>

</LinearLayout>
