<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginTop="-82dp"
        android:layout_marginBottom="82dp"
        android:background="@drawable/blue"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_to_denox"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tocontinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signin_to_continue"
            android:textColor="@color/white" />

        <!--            android:layout_marginBottom="100dp"-->

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="340dp"
        android:layout_height="450dp"
        android:layout_marginTop="-200dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:cardElevation="10dp"
        android:background="@color/white"
        android:backgroundTint="#D8E3E0"
        app:cardCornerRadius="25dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="140dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="#F9FAFB">


        <EditText
            android:id="@+id/EmailAddress"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/email_address"
            android:textColorHint="#75787C"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:autofillHints="" />
    </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="230dp"
                app:cardBackgroundColor="#F9FAFB">
            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/password"
                android:textColorHint="#75787C"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:autofillHints="" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/gotosignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_signup"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginStart="75dp"
                android:layout_marginTop="320dp"
                />
            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/login"
                android:gravity="center"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_marginTop="400dp"
                app:cornerRadius="25dp"
                android:layout_marginLeft="130dp"
                android:layout_marginRight="130dp"/>

    </androidx.cardview.widget.CardView>

    <!--</androidx.cardview.widget.CardView>-->

</LinearLayout>