<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginTop="-82dp"
        android:layout_marginBottom="82dp"
        android:background="@drawable/blue"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_to_denox"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

<!--        <TextView-->
<!--            android:id="@+id/tocontinue"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/signin_to_continue"-->
<!--            android:textColor="@color/white" />-->

        <!--            android:layout_marginBottom="100dp"-->

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="340dp"
        android:layout_height="450dp"
        android:layout_marginTop="-200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardElevation="10dp"
        android:background="@color/white"
        android:backgroundTint="#D8E3E0"
        app:cardCornerRadius="25dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="50dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#F9FAFB">


            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="@string/email_address"
                android:textAlignment="center"
                android:textColorHint="#75787C"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:autofillHints="" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="140dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="25dp"
            app:cardBackgroundColor="#F9FAFB">


            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="@string/username"
                android:textAlignment="center"
                android:textColorHint="#75787C"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:inputType="text"
                android:autofillHints="" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="25dp"
            android:layout_marginTop="230dp"
            app:cardBackgroundColor="#F9FAFB">
            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="@string/password"
                android:textColorHint="#75787C"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="17sp"
                android:autofillHints="" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="25dp"
            android:layout_marginTop="320dp"
            app:cardBackgroundColor="#F9FAFB">
            <EditText
                android:id="@+id/PasswordAgain"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="@string/Retypepassword"
                android:textColorHint="#75787C"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="17sp"
                android:autofillHints="" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="115dp"
            android:layout_marginRight="115dp"
            android:layout_marginTop="400dp"
            android:text="@string/SignUp"
            android:textAlignment="center"
            app:cornerRadius="25dp" />

    </androidx.cardview.widget.CardView>

    <!--</androidx.cardview.widget.CardView>-->

</LinearLayout>