<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:gravity="fill_horizontal"
        android:background="@drawable/blue"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/denox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="20dp"
            android:text="@string/denox"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/usericon"
            android:layout_width="5dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_marginTop="33dp"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/blue"
            app:srcCompat="@drawable/ic_usericon"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textStyle="italic"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:text="@string/username" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="13dp"
        android:gravity="fill_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="170dp"
            android:layout_marginBottom="5dp"
            android:background="#EBEDEF"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/menuicon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_menu_icon"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/tasks"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/task"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/chatsandcalls"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/chats"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/businessplan"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/plan"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/salesandexpences"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/saleandexpence"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/invoice"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/invoice"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/projects"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/project"
                android:contentDescription="@string/todo" />
        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="-168dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/dashboard"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="-10dp"
                android:text="@string/chats_and_calls"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="145dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="0dp"
                    android:elevation="5dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp"
                        android:background="#C7C9CA"
                        android:text="@string/calls_and_messages"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp"
                        android:background="#C7C9CA"
                        android:paddingTop="5dp"
                        android:layout_marginTop="20dp"
                        android:text=" Sellect contacts bellow to start a conversation"
                        android:textStyle="italic"

                        />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="145dp"
                    android:layout_marginEnd="0dp"
                    android:elevation="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/calls"
                        >

                    </ImageView>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
